[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/BaseButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://menus/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/PauseMenu.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "settings_slide_in"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 325, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -325, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "slide_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 325, -185 ), Vector2( 325, -185 ), Vector2( 325, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -185 ), Vector2( 0, -185 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadedBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0
custom_constants/separation = 16
alignment = 1

[node name="TextWrap" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 304.0
margin_bottom = 12.0

[node name="PauseLabel" type="Label" parent="MarginContainer/VBoxContainer/TextWrap"]
margin_right = 304.0
margin_bottom = 6.0
text = "Game paused!"
align = 1

[node name="ButtonWrap" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 92.0
margin_top = 28.0
margin_right = 212.0
margin_bottom = 158.0
size_flags_horizontal = 4
custom_constants/separation = 14
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ButtonWrap"]
margin_right = 120.0
margin_bottom = 42.0
custom_constants/separation = 6

[node name="ResumeButton" parent="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 120.0
margin_bottom = 18.0
text = "Resume"

[node name="RestartButton" parent="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 42.0
text = "Restart Level"

[node name="SettingsButton" parent="MarginContainer/VBoxContainer/ButtonWrap" instance=ExtResource( 1 )]
margin_top = 56.0
margin_right = 120.0
margin_bottom = 74.0
text = "Settings"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ButtonWrap"]
margin_top = 88.0
margin_right = 120.0
margin_bottom = 130.0
custom_constants/separation = 6

[node name="MainMenuButton" parent="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer2" instance=ExtResource( 1 )]
margin_right = 120.0
margin_bottom = 18.0
text = "Main Menu"

[node name="QuitButton" parent="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 42.0
text = "Quit Game"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
margin_left = 325.0
margin_right = 325.0
showClearSaveButton = false
previousButtonText = "Go Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/settings_slide_in = SubResource( 1 )
anims/slide_in = SubResource( 2 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer2/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/VBoxContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="previous_menu_pressed" from="SettingsMenu" to="." method="_on_SettingsMenu_previous_menu_pressed"]
